<resources>
    <string name="app_name">UFS Navigation Assistant</string>
    <string name="mapbox_access_token">
        pk.eyJ1IjoiZGFjdWJhIiwiYSI6ImNrbm0yMXNrMjBremUybnByaHo1bG4wZTMifQ.Ae4b2QIeBsT3SV5Nr8sRqA
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_building">All Buildings</string>
    <string name="menu_parking">Parkings</string>
    <string name="menu_office">Offices</string>
    <string name="halls">Lecture Halls</string>
    <string name="study">Study Places</string>
    <string name="health">Health Services</string>
    <string name="eating">Eating Places</string>
    <string name="shops">Shops</string>
    <string name="sports">Sports</string>
    <string name="femaleToilets">Female Toilets</string>
    <string name="maleToilets">Male Toilets</string>
    <string name="hostels">Hostels</string>
    <string name="nav_header_title">Header title</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="welcome_heading">UFS Campus Navigation Assistant</string>
    <string name="welcome_subheading">
        This application helps you to find the way around the campus. You can browse through categories on the left menu.
    </string>
    <string name="building_name">Building name</string>
    <string name="room_name">Room name</string>
    <string name="building_description">Building description</string>
    <string name="building_level">Building level</string>
    <string name="num_room">Number of rooms</string>
    <string name="nav_fab">Directions</string>
    <string name="list_rooms">Rooms</string>
    <string name="list_toilets">Toilets</string>

    <!--Basic user location permission toasts-->
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <!--Custom location layer plugin icon-->
    <string name="current_location">Lat: %1$f Long: %2$f</string>
    <string name="tracking_enabled">Tracking mode re-enabled</string>
    <string name="tracking_already_enabled">Tracking already enabled. Move the map</string>

    <string name="enable_gps">Enable GPS</string>
    <string name="required_for_this_app">Required for this app</string>
    <string name="enable_now">Enable Now</string>
    <string name="location_permission_not_granted">Location Permission not granted</string>

    <string name="event_name">Event name</string>
    <string name="date">Date</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="dash">-</string>
    <string name="comma">,</string>
    <string name="start_nav">START NAVIGATION</string>
    <string name="tv_destination">Tap here to return back</string>
    <string name="back">Back</string>
    <string name="entrance">Entrance name</string>
    <string name="direction_text">Directions</string>

    <string name="login_form_title">Login</string>
    <string name="login_form_username">Username</string>
    <string name="login_form_password">Password</string>
    <string name="login_form_login">LOGIN</string>

    <string name="course_name">Course Name</string>
    <string name="timetable_day">Day</string>
    <string name="level_name">Level name</string>
    <string name="next_class">Next Class</string>
    <string name="all_classes">All Classes</string>

    <string-array name="Days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>

    <string name="create_timetable_title">New timetable entry</string>
    <string name="module_code">Module code</string>
    <string name="create_timetable">Create entry</string>
</resources>