<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?pageBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CreateTimetableActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="#fff"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="8dp"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/create_timetable_title"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room_name"
                android:textSize="22sp" />

            <Spinner
                android:id="@+id/room_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@android:style/Widget.Material.Spinner.Underlined"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/module_code"
                android:textSize="22sp" />

            <Spinner
                android:id="@+id/module_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@android:style/Widget.Material.Spinner.Underlined"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timetable_day"
                android:textSize="22sp" />

            <Spinner
                android:id="@+id/day_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@android:style/Widget.Material.Spinner.Underlined"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/et_start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:focusableInTouchMode="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_time"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/et_end_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:focusableInTouchMode="false"/>

            <Button
                android:id="@+id/btn_create_timetable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_timetable"
                android:textSize="22sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
