<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.bottomnav.TimetableFragment">

    <!-- NEXT CLASS STARTS -->
    <TextView
        android:id="@+id/tv_next_class"
        style="?attr/textRegular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/mapboxGrayLight"
        android:paddingLeft="24dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/next_class"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/next_class_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_next_class">

        <LinearLayout
            android:id="@+id/next_class_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/next_course_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_name"
                    android:textColor="@color/color_primary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/ic_baseline_location_on_24" />

                    <TextView
                        android:id="@+id/next_timetable_room"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/room_name"
                        android:textAppearance="?attr/textAppearanceBody1"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/comma"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/next_timetable_building"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/building_name"
                        android:textAppearance="?attr/textAppearanceBody1"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/ic_baseline_date_range" />

                    <TextView
                        android:id="@+id/next_timetable_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/timetable_day"
                        android:textAppearance="?attr/textAppearanceBody1"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:src="@drawable/ic_baseline_schedule" />

                        <TextView
                            android:id="@+id/next_timetable_start_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/start_time"
                            android:textAppearance="?attr/textAppearanceBody1"
                            android:textColor="?android:attr/textColorSecondary"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/dash"
                            android:textAppearance="?attr/textAppearanceBody1"
                            android:textColor="?android:attr/textColorSecondary"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/next_timetable_end_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/end_time"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <!-- ADDED SPACER VIEW -->
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <!-- /ADDED SPACER VIEW -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/next_class_start_nav"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_nav" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <!-- NEXT CLASS ENDS -->

    <TextView
        android:id="@+id/all_class"
        style="?attr/textRegular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:paddingLeft="24dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/all_classes"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/next_class_card" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/timetableRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/all_class"
        tools:listitem="@layout/timetable_list_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/timetable_navigation_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/nav_fab"
        android:src="@drawable/ic_baseline_add_circle"
        app:fabSize="normal"
        app:backgroundTint="@color/color_primary"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>